add getFoodsById
