# routes/food.js
@@ -6,8 +6,9 @@ const foodController = require("../controllers/food");
 const router = Router({ strict: true });
 
 // router.post("/login", userController.login);
-router.post("/donate",isAuth, foodController.createFood);
+router.post("/donate", isAuth, foodController.createFood);
 router.get("/donations", isAuth, foodController.getFoods);
+router.get("/donations/:id", isAuth, foodController.getFoodsById);
 router
   .route("/donation/:id")
   .put(isAuth, foodController.updateFoodDonation)
